--- a/main.html
+++ b/main.html
@@ -34,23 +34,23 @@
 		<META name="twitter:description" content="의정부시 금오동, 치핵, 치루, 치열, 항문, 대장내시경, 용종절제술, 대장암">
 		<title>의정부 홍문외과</title>
 		<link rel="canonical" href="index.html" />
-		<link rel="stylesheet" href="/assets/css/jquery.slider.css">
-		<link rel="stylesheet" href="/assets/css/common.css">
-		<link rel="stylesheet" href="/assets/css/skin38.css">
+		<link rel="stylesheet" href="assets/css/jquery.slider.css">
+		<link rel="stylesheet" href="assets/css/common.css">
+		<link rel="stylesheet" href="assets/css/skin38.css">
 
-		<script src="/assets/js/jquery-1.11.1.min.js"></script>
-		<script src="/assets/js/kakao.link.js"></script>
-		<script src="/assets/js/jquery.slider.min.js"></script>
-		<script src="/assets/js/common.js"></script>
+		<script src="assets/js/jquery-1.11.1.min.js"></script>
+		<script src="assets/js/kakao.link.js"></script>
+		<script src="assets/js/jquery.slider.min.js"></script>
+		<script src="assets/js/common.js"></script>
 		<script>var _current_page = "main";</script>
 		<!--[if IE]>
-		<script src="/assets/js/html5.js"></script>
+		<script src="assets/js/html5.js"></script>
 		<![endif]-->
 		<meta name="format-detection" content="telephone=no" />
-<link href="/assets/css/popup.css" rel="stylesheet" />
+<link href="assets/css/popup.css" rel="stylesheet" />
 <link href='upload/hongmun/css/board.css' rel='stylesheet' />
-<script src="/assets/js/modal_object.js"></script>	
-<script src="/assets/js/jquery.form.min.js"></script>
+<script src="assets/js/modal_object.js"></script>	
+<script src="assets/js/jquery.form.min.js"></script>
 <script type="text/javascript">
 //	_current_page = "main";
 
@@ -295,7 +295,7 @@
 			$("#footer").empty();
 			$("#footer").append(t_footer);
 		}else if("1000000940"=="1000001143"){
-			var t_footer = '<footer id="footer" role="contentinfo" style="height: 150px;"><div id="footer-content"><p>인천광역시 남동구 예술로 204번길 31 신양빌딩 3F</p><p style="margin-top: -10px;">대표번호 : 1661-8055</p><p style="margin-top: -10px;">이메일 : ilikedoc@naver.com</p><center><p style="text-align : center;border: 1px solid white; width: 200px; font-color : black"><a href="http://www.saeneulcom.com" target="_blank"><img src="/assets/images/footer_logo_bi_2.png" caption="(주)새늘컴퍼니" width="120"/></a></p></center><p class="credit-link"></p><p style="opacity: 0.4;font-size: 9px;letter-spacing: 0px; margin-top: -10px;">Copyright ⓒ  ILikeDoctor &amp; SaeneulCompany . All Rights Reserved.</p></div></footer>';
+			var t_footer = '<footer id="footer" role="contentinfo" style="height: 150px;"><div id="footer-content"><p>인천광역시 남동구 예술로 204번길 31 신양빌딩 3F</p><p style="margin-top: -10px;">대표번호 : 1661-8055</p><p style="margin-top: -10px;">이메일 : ilikedoc@naver.com</p><center><p style="text-align : center;border: 1px solid white; width: 200px; font-color : black"><a href="http://www.saeneulcom.com" target="_blank"><img src="assets/images/footer_logo_bi_2.png" caption="(주)새늘컴퍼니" width="120"/></a></p></center><p class="credit-link"></p><p style="opacity: 0.4;font-size: 9px;letter-spacing: 0px; margin-top: -10px;">Copyright ⓒ  ILikeDoctor &amp; SaeneulCompany . All Rights Reserved.</p></div></footer>';
 			$("#footer").empty();
 			$("#footer").append(t_footer);
 		}else{
@@ -1461,7 +1461,7 @@ function slidenum(num){
 
 		var contentString = [
 			'<div class="iw_inner" style="width:180px;">',
-			'   <img src="/assets/images/logo.png" style="max-width:180px;">',
+			'   <img src="assets/images/logo.png" style="max-width:180px;">',
 			'</div>'
 		].join('');
 
@@ -1961,7 +1961,7 @@ function slidenum(num){
 </div>
 <div class="mask-div" id="mask" style="position:absolute; z-index:9000; background-color:#000; display:none; left:0; top:0; width:100%; height:140%;opacity:0.7;"></div>
 <div class="mask-div" style="display: none; position:absolute; left:10%;  top:15%; z-index:10000;">
-	<img src="/assets/images/end_logo.jpg" style="width:90%;">
+	<img src="assets/images/end_logo.jpg" style="width:90%;">
 </div>
 <script>
  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -1978,10 +1978,10 @@ function slidenum(num){
 				<div class="container">
 					<!-- 상단 홈/로고/전화 영역 -->
 					<div class="navbar-header">
-						<img src="/assets/images/icon_menu.png" class="icon-top icon-menu" alt="메뉴선택" />
-						<img src="/assets/images/icon_home.png" id="tpl_main" class="icon-top icon-home" alt="홈으로가기" hidden>
-						<img src="/assets/images/logo.png" id="tpl_main" class="navbar-brand" rel="home" alt="로고">
-						<img src="/assets/images/icon_tel.png" id="tpl_phone_tel" class="icon-top icon-phone" alt="전화걸기">
+						<img src="assets/images/icon_menu.png" class="icon-top icon-menu" alt="메뉴선택" />
+						<img src="assets/images/icon_home.png" id="tpl_main" class="icon-top icon-home" alt="홈으로가기" hidden>
+						<img src="assets/images/logo.png" id="tpl_main" class="navbar-brand" rel="home" alt="로고">
+						<img src="assets/images/icon_tel.png" id="tpl_phone_tel" class="icon-top icon-phone" alt="전화걸기">
 					</div>
 					<!-- //상단 홈/로고/전화 영역 -->
 					
