--- a/sub1.html
+++ b/sub1.html
@@ -31,24 +31,24 @@
 		<META name="twitter:image" content="images/b.png">
 		<META name="twitter:description" content="의정부시 금오동, 치핵, 치루, 치열, 항문, 대장내시경, 용종절제술, 대장암">
 		<title>의정부 홍문외과 본원 소개</title>
-		<link rel="stylesheet" href="/assets/css/jquery.slider.css">
-		<link rel="stylesheet" href="/assets/css/common.css">
+		<link rel="stylesheet" href="assets/css/jquery.slider.css">
+		<link rel="stylesheet" href="assets/css/common.css">
 
-		<script src="/assets/js/jquery-1.11.1.min.js"></script>
-		<script src="/assets/js/kakao.link.js"></script>
-		<script src="/assets/js/jquery.slider.min.js"></script>
-		<script src="/assets/js/common.js"></script>
+		<script src="assets/js/jquery-1.11.1.min.js"></script>
+		<script src="assets/js/kakao.link.js"></script>
+		<script src="assets/js/jquery.slider.min.js"></script>
+		<script src="assets/js/common.js"></script>
 		<!--[if IE]>
-		<script src="/assets/js/html5.js"></script>
+		<script src="assets/js/html5.js"></script>
 		<![endif]-->
-		<link type="text/css" rel="stylesheet" href="/assets/css/skin38.css">
+		<link type="text/css" rel="stylesheet" href="assets/css/skin38.css">
 		<link type='text/css' rel='stylesheet' href='upload/hongmun/css/skin_sub04.css'>
 		<link type='text/css' rel='stylesheet' href='upload/hongmun/css/board.css'>
 		<meta name="format-detection" content="telephone=no" />
-<link href="/assets/css/popup.css" rel="stylesheet" />
+<link href="assets/css/popup.css" rel="stylesheet" />
 <link href='upload/hongmun/css/board.css' rel='stylesheet' />
-<script src="/assets/js/modal_object.js"></script>	
-<script src="/assets/js/jquery.form.min.js"></script>
+<script src="assets/js/modal_object.js"></script>	
+<script src="assets/js/jquery.form.min.js"></script>
 <script type="text/javascript">
 //	_current_page = "main";
 
@@ -293,7 +293,7 @@
 			$("#footer").empty();
 			$("#footer").append(t_footer);
 		}else if("1000000940"=="1000001143"){
-			var t_footer = '<footer id="footer" role="contentinfo" style="height: 150px;"><div id="footer-content"><p>인천광역시 남동구 예술로 204번길 31 신양빌딩 3F</p><p style="margin-top: -10px;">대표번호 : 1661-8055</p><p style="margin-top: -10px;">이메일 : ilikedoc@naver.com</p><center><p style="text-align : center;border: 1px solid white; width: 200px; font-color : black"><a href="http://www.saeneulcom.com" target="_blank"><img src="/assets/images/footer_logo_bi_2.png" caption="(주)새늘컴퍼니" width="120"/></a></p></center><p class="credit-link"></p><p style="opacity: 0.4;font-size: 9px;letter-spacing: 0px; margin-top: -10px;">Copyright ⓒ  ILikeDoctor &amp; SaeneulCompany . All Rights Reserved.</p></div></footer>';
+			var t_footer = '<footer id="footer" role="contentinfo" style="height: 150px;"><div id="footer-content"><p>인천광역시 남동구 예술로 204번길 31 신양빌딩 3F</p><p style="margin-top: -10px;">대표번호 : 1661-8055</p><p style="margin-top: -10px;">이메일 : ilikedoc@naver.com</p><center><p style="text-align : center;border: 1px solid white; width: 200px; font-color : black"><a href="http://www.saeneulcom.com" target="_blank"><img src="assets/images/footer_logo_bi_2.png" caption="(주)새늘컴퍼니" width="120"/></a></p></center><p class="credit-link"></p><p style="opacity: 0.4;font-size: 9px;letter-spacing: 0px; margin-top: -10px;">Copyright ⓒ  ILikeDoctor &amp; SaeneulCompany . All Rights Reserved.</p></div></footer>';
 			$("#footer").empty();
 			$("#footer").append(t_footer);
 		}else{
@@ -1459,7 +1459,7 @@ function slidenum(num){
 
 		var contentString = [
 			'<div class="iw_inner" style="width:180px;">',
-			'   <img src="/assets/images/logo.png" style="max-width:180px;">',
+			'   <img src="assets/images/logo.png" style="max-width:180px;">',
 			'</div>'
 		].join('');
 
@@ -1963,7 +1963,7 @@ function slidenum(num){
 </div>
 <div class="mask-div" id="mask" style="position:absolute; z-index:9000; background-color:#000; display:none; left:0; top:0; width:100%; height:140%;opacity:0.7;"></div>
 <div class="mask-div" style="display: none; position:absolute; left:10%;  top:15%; z-index:10000;">
-	<img src="/assets/images/end_logo.jpg" style="width:90%;">
+	<img src="assets/images/end_logo.jpg" style="width:90%;">
 </div>
 <script>
  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -1980,10 +1980,10 @@ function slidenum(num){
 				<div class="container">
 					<!-- 상단 홈/로고/전화 영역 -->
 					<div class="navbar-header">
-						<img src="/assets/images/icon_menu.png" class="icon-top icon-menu"/>
-						<img src="/assets/images/icon_home.png" id="tpl_main" class="icon-top icon-home" hidden>
-						<img src="/assets/images/logo.png" id="tpl_main" class="navbar-brand" rel="home">
-						<img src="/assets/images/icon_tel.png" id="tpl_phone_tel" class="icon-top icon-phone">
+						<img src="assets/images/icon_menu.png" class="icon-top icon-menu"/>
+						<img src="assets/images/icon_home.png" id="tpl_main" class="icon-top icon-home" hidden>
+						<img src="assets/images/logo.png" id="tpl_main" class="navbar-brand" rel="home">
+						<img src="assets/images/icon_tel.png" id="tpl_phone_tel" class="icon-top icon-phone">
 					</div>
 					<!-- //상단 홈/로고/전화 영역 -->
 					
@@ -2216,7 +2216,7 @@ function slidenum(num){
                 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
 </style>
-<div><img alt="본원소개" src="/assets/images/con_sub_top1.png" /></div>
+<div><img alt="본원소개" src="assets/images/con_sub_top1.png" /></div>
 
 <table border="1" cellpadding="0" cellspacing="1" width="100%">
 	<colgroup>
@@ -2239,7 +2239,7 @@ function slidenum(num){
 
 <p class="h2_small">HONGMUN CLINIC</p>
 
-<div class="intro_wrap"><img alt="" src="/assets/images/intro_doc.png" /></div>
+<div class="intro_wrap"><img alt="" src="assets/images/intro_doc.png" /></div>
 
 <p class="intro_txt">안녕하세요. 홍문외과 모바일홈페이지 방문을 환영합니다.<br />
 <br />
@@ -2249,7 +2249,7 @@ function slidenum(num){
 저희&nbsp;홍문외과를 찾아주시는 모든 분들께 기쁨과 감동을 선사해드릴 수 있도록 최선의 노력을 다하겠습니다.<br />
 감사합니다.</p>
 
-<p class="intro_ttname" style="text-align: right;"><!-- <strong><span style="font-size:14px;">홍문외과의원 의료진 일동 드림</span></strong> --><img alt="" src="/assets/images/name_tag.png" /></p>
+<p class="intro_ttname" style="text-align: right;"><!-- <strong><span style="font-size:14px;">홍문외과의원 의료진 일동 드림</span></strong> --><img alt="" src="assets/images/name_tag.png" /></p>
 </article>
 <!-- 둘러보기 -->
 
@@ -2259,86 +2259,86 @@ function slidenum(num){
 <h2>둘러보기</h2>
 
 <p class="h2_small">HONGMUN CLINIC</p>
-<!-- <p class="intro_photo"><img src="/assets/images/sub01_img02.png" style="border-width: 0px; border-style: solid;" /></p> --></article>
+<!-- <p class="intro_photo"><img src="assets/images/sub01_img02.png" style="border-width: 0px; border-style: solid;" /></p> --></article>
 
 <div class="row">
-<div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(1)" src="/assets/images/tour_img01.jpg" style="width:100%" /></div>
+<div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(1)" src="assets/images/tour_img01.jpg" style="width:100%" /></div>
 
-<div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(2)" src="/assets/images/tour_img02.jpg" style="width:100%" /></div>
+<div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(2)" src="assets/images/tour_img02.jpg" style="width:100%" /></div>
 </div>
 
 <p></p>
 
 <div class="row">
-<div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(3)" src="/assets/images/tour_img03.jpg" style="width:100%" /></div>
+<div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(3)" src="assets/images/tour_img03.jpg" style="width:100%" /></div>
 
-<div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(4)" src="/assets/images/tour_img04.jpg" style="width:100%" /></div>
+<div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(4)" src="assets/images/tour_img04.jpg" style="width:100%" /></div>
 </div>
 
 <p></p>
 
 <div class="row">
-<div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(5)" src="/assets/images/tour_img05.jpg" style="width:100%" /></div>
+<div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(5)" src="assets/images/tour_img05.jpg" style="width:100%" /></div>
 
-<div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(6)" src="/assets/images/tour_img06.jpg" style="width:100%" /></div>
+<div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(6)" src="assets/images/tour_img06.jpg" style="width:100%" /></div>
 </div>
 
 <p></p>
 
 <div class="row">
-<div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(7)" src="/assets/images/tour_img07.jpg" style="width:100%" /></div>
+<div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(7)" src="assets/images/tour_img07.jpg" style="width:100%" /></div>
 <!-- <div class="column"><img class="hover-shadow cursor" onclick="openModal();currentSlide(8)"
-                                src="/assets/images/tour_img04.jpg" style="width:100%" /></div> --></div>
+                                src="assets/images/tour_img04.jpg" style="width:100%" /></div> --></div>
 
 <div class="modal" id="myModal"><span class="close cursor" onclick="closeModal()">&times;</span>
 
 <div class="modal-content">
 <div class="mySlides">
 <div class="numbertext">1 / 7</div>
-<img src="/assets/images/tour_img01.jpg" style="width:100%" /></div>
+<img src="assets/images/tour_img01.jpg" style="width:100%" /></div>
 
 <div class="mySlides">
 <div class="numbertext">2 / 7</div>
-<img src="/assets/images/tour_img02.jpg" style="width:100%" /></div>
+<img src="assets/images/tour_img02.jpg" style="width:100%" /></div>
 
 <div class="mySlides">
 <div class="numbertext">3 / 7</div>
-<img src="/assets/images/tour_img03.jpg" style="width:100%" /></div>
+<img src="assets/images/tour_img03.jpg" style="width:100%" /></div>
 
 <div class="mySlides">
 <div class="numbertext">4 / 7</div>
-<img src="/assets/images/tour_img04.jpg" style="width:100%" /></div>
+<img src="assets/images/tour_img04.jpg" style="width:100%" /></div>
 
 <div class="mySlides">
 <div class="numbertext">5 / 7</div>
-<img src="/assets/images/tour_img05.jpg" style="width:100%" /></div>
+<img src="assets/images/tour_img05.jpg" style="width:100%" /></div>
 
 <div class="mySlides">
 <div class="numbertext">6 / 7</div>
-<img src="/assets/images/tour_img06.jpg" style="width:100%" /></div>
+<img src="assets/images/tour_img06.jpg" style="width:100%" /></div>
 
 <div class="mySlides">
 <div class="numbertext">7 / 7</div>
-<img src="/assets/images/tour_img07.jpg" style="width:100%" /></div>
+<img src="assets/images/tour_img07.jpg" style="width:100%" /></div>
 <a class="prev" onclick="plusSlides(-1)">❮</a> <a class="next" onclick="plusSlides(1)">❯</a>
 
 <div class="caption-container">
 <p id="caption"></p>
 </div>
 
-<div class="column"><img alt="" class="demo cursor" onclick="currentSlide(1)" src="/assets/images/tour_img01.jpg" style="width:100%" /></div>
+<div class="column"><img alt="" class="demo cursor" onclick="currentSlide(1)" src="assets/images/tour_img01.jpg" style="width:100%" /></div>
 
-<div class="column"><img alt="" class="demo cursor" onclick="currentSlide(2)" src="/assets/images/tour_img02.jpg" style="width:100%" /></div>
+<div class="column"><img alt="" class="demo cursor" onclick="currentSlide(2)" src="assets/images/tour_img02.jpg" style="width:100%" /></div>
 
-<div class="column"><img alt="" class="demo cursor" onclick="currentSlide(3)" src="/assets/images/tour_img03.jpg" style="width:100%" /></div>
+<div class="column"><img alt="" class="demo cursor" onclick="currentSlide(3)" src="assets/images/tour_img03.jpg" style="width:100%" /></div>
 
-<div class="column"><img alt="" class="demo cursor" onclick="currentSlide(4)" src="/assets/images/tour_img04.jpg" style="width:100%" /></div>
+<div class="column"><img alt="" class="demo cursor" onclick="currentSlide(4)" src="assets/images/tour_img04.jpg" style="width:100%" /></div>
 
-<div class="column"><img alt="" class="demo cursor" onclick="currentSlide(5)" src="/assets/images/tour_img05.jpg" style="width:100%" /></div>
+<div class="column"><img alt="" class="demo cursor" onclick="currentSlide(5)" src="assets/images/tour_img05.jpg" style="width:100%" /></div>
 
-<div class="column"><img alt="" class="demo cursor" onclick="currentSlide(6)" src="/assets/images/tour_img06.jpg" style="width:100%" /></div>
+<div class="column"><img alt="" class="demo cursor" onclick="currentSlide(6)" src="assets/images/tour_img06.jpg" style="width:100%" /></div>
 
-<div class="column"><img alt="" class="demo cursor" onclick="currentSlide(7)" src="/assets/images/tour_img07.jpg" style="width:100%" /></div>
+<div class="column"><img alt="" class="demo cursor" onclick="currentSlide(7)" src="assets/images/tour_img07.jpg" style="width:100%" /></div>
 </div>
 </div>
 <script>
@@ -2384,7 +2384,7 @@ function slidenum(num){
 			</section>
 			<!-- //메인영역 -->
 
-			<div id="goto-top"><img src="/assets/images/btn_top.png"/></div>
+			<div id="goto-top"><img src="assets/images/btn_top.png"/></div>
 
 
 			</div>
