--- a/sub4.html
+++ b/sub4.html
@@ -31,24 +31,24 @@
 		<META name="twitter:image" content="images/b.png">
 		<META name="twitter:description" content="의정부시 금오동, 치핵, 치루, 치열, 항문, 대장내시경, 용종절제술, 대장암">
 		<title>의정부 홍문외과 </title>
-		<link rel="stylesheet" href="/assets/css/jquery.slider.css">
-		<link rel="stylesheet" href="/assets/css/common.css">
+		<link rel="stylesheet" href="assets/css/jquery.slider.css">
+		<link rel="stylesheet" href="assets/css/common.css">
 
-		<script src="/assets/js/jquery-1.11.1.min.js"></script>
-		<script src="/assets/js/kakao.link.js"></script>
-		<script src="/assets/js/jquery.slider.min.js"></script>
-		<script src="/assets/js/common.js"></script>
+		<script src="assets/js/jquery-1.11.1.min.js"></script>
+		<script src="assets/js/kakao.link.js"></script>
+		<script src="assets/js/jquery.slider.min.js"></script>
+		<script src="assets/js/common.js"></script>
 		<!--[if IE]>
-		<script src="/assets/js/html5.js"></script>
+		<script src="assets/js/html5.js"></script>
 		<![endif]-->
-		<link type="text/css" rel="stylesheet" href="/assets/css/skin38.css">
+		<link type="text/css" rel="stylesheet" href="assets/css/skin38.css">
 		<link type='text/css' rel='stylesheet' href='upload/hongmun/css/skin_sub04.css'>
 		<link type='text/css' rel='stylesheet' href='upload/hongmun/css/board.css'>
 		<meta name="format-detection" content="telephone=no" />
-<link href="/assets/css/popup.css" rel="stylesheet" />
+<link href="assets/css/popup.css" rel="stylesheet" />
 <link href='upload/hongmun/css/board.css' rel='stylesheet' />
-<script src="/assets/js/modal_object.js"></script>	
-<script src="/assets/js/jquery.form.min.js"></script>
+<script src="assets/js/modal_object.js"></script>	
+<script src="assets/js/jquery.form.min.js"></script>
 <script type="text/javascript">
 //	_current_page = "main";
 
@@ -293,7 +293,7 @@
 			$("#footer").empty();
 			$("#footer").append(t_footer);
 		}else if("1000000940"=="1000001143"){
-			var t_footer = '<footer id="footer" role="contentinfo" style="height: 150px;"><div id="footer-content"><p>인천광역시 남동구 예술로 204번길 31 신양빌딩 3F</p><p style="margin-top: -10px;">대표번호 : 1661-8055</p><p style="margin-top: -10px;">이메일 : ilikedoc@naver.com</p><center><p style="text-align : center;border: 1px solid white; width: 200px; font-color : black"><a href="http://www.saeneulcom.com" target="_blank"><img src="/assets/images/footer_logo_bi_2.png" caption="(주)새늘컴퍼니" width="120"/></a></p></center><p class="credit-link"></p><p style="opacity: 0.4;font-size: 9px;letter-spacing: 0px; margin-top: -10px;">Copyright ⓒ  ILikeDoctor &amp; SaeneulCompany . All Rights Reserved.</p></div></footer>';
+			var t_footer = '<footer id="footer" role="contentinfo" style="height: 150px;"><div id="footer-content"><p>인천광역시 남동구 예술로 204번길 31 신양빌딩 3F</p><p style="margin-top: -10px;">대표번호 : 1661-8055</p><p style="margin-top: -10px;">이메일 : ilikedoc@naver.com</p><center><p style="text-align : center;border: 1px solid white; width: 200px; font-color : black"><a href="http://www.saeneulcom.com" target="_blank"><img src="assets/images/footer_logo_bi_2.png" caption="(주)새늘컴퍼니" width="120"/></a></p></center><p class="credit-link"></p><p style="opacity: 0.4;font-size: 9px;letter-spacing: 0px; margin-top: -10px;">Copyright ⓒ  ILikeDoctor &amp; SaeneulCompany . All Rights Reserved.</p></div></footer>';
 			$("#footer").empty();
 			$("#footer").append(t_footer);
 		}else{
@@ -1459,7 +1459,7 @@ function slidenum(num){
 
 		var contentString = [
 			'<div class="iw_inner" style="width:180px;">',
-			'   <img src="/assets/images/logo.png" style="max-width:180px;">',
+			'   <img src="assets/images/logo.png" style="max-width:180px;">',
 			'</div>'
 		].join('');
 
@@ -1963,7 +1963,7 @@ function slidenum(num){
 </div>
 <div class="mask-div" id="mask" style="position:absolute; z-index:9000; background-color:#000; display:none; left:0; top:0; width:100%; height:140%;opacity:0.7;"></div>
 <div class="mask-div" style="display: none; position:absolute; left:10%;  top:15%; z-index:10000;">
-	<img src="/assets/images/end_logo.jpg" style="width:90%;">
+	<img src="assets/images/end_logo.jpg" style="width:90%;">
 </div>
 <script>
  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -1980,10 +1980,10 @@ function slidenum(num){
 				<div class="container">
 					<!-- 상단 홈/로고/전화 영역 -->
 					<div class="navbar-header">
-						<img src="/assets/images/icon_menu.png" class="icon-top icon-menu"/>
-						<img src="/assets/images/icon_home.png" id="tpl_main" class="icon-top icon-home" hidden>
-						<img src="/assets/images/logo.png" id="tpl_main" class="navbar-brand" rel="home">
-						<img src="/assets/images/icon_tel.png" id="tpl_phone_tel" class="icon-top icon-phone">
+						<img src="assets/images/icon_menu.png" class="icon-top icon-menu"/>
+						<img src="assets/images/icon_home.png" id="tpl_main" class="icon-top icon-home" hidden>
+						<img src="assets/images/logo.png" id="tpl_main" class="navbar-brand" rel="home">
+						<img src="assets/images/icon_tel.png" id="tpl_phone_tel" class="icon-top icon-phone">
 					</div>
 					<!-- //상단 홈/로고/전화 영역 -->
 					
@@ -2131,7 +2131,7 @@ function slidenum(num){
         margin-left: 12px;
     }
 </style>
-<div><img alt="검사안내" src="/assets/images/con_sub_top4.png" /></div>
+<div><img alt="검사안내" src="assets/images/con_sub_top4.png" /></div>
 
 <table border="1" cellpadding="0" cellspacing="1" width="100%">
     <colgroup>
@@ -2165,7 +2165,7 @@ function slidenum(num){
 
         <p class="h2_small">HONGMUN CLINIC</p>
 
-        <div><img alt="" src="/assets/images/sub4_01.png" /></div>
+        <div><img alt="" src="assets/images/sub4_01.png" /></div>
 
         <div style="padding:10px 10px;">
             <h3 class="tt_pgh">대장 내시경 검사가 필요한 사람은?</h3>
@@ -2197,7 +2197,7 @@ function slidenum(num){
 
         <p class="h2_small">HONGMUN CLINIC</p>
 
-        <div><img alt="" src="/assets/images/sub4_02.png" /></div>
+        <div><img alt="" src="assets/images/sub4_02.png" /></div>
 
         <div style="padding:10px 10px;">
             <h3 class="tt_pgh">치질(치핵)이란?</h3>
@@ -2266,34 +2266,34 @@ function slidenum(num){
 
             <ul class="list_dash txt_pgh">
                 <li>
-                    <p><!-- <img alt="체크아이콘" src="/assets/images/bul_2.png"/> -->배변 후 항문 밖으로 치핵이 튀어나와서 손으로 밀어
+                    <p><!-- <img alt="체크아이콘" src="assets/images/bul_2.png"/> -->배변 후 항문 밖으로 치핵이 튀어나와서 손으로 밀어
                         넣어야 들어간다.</p>
                 </li>
                 <li>
-                    <p><!-- <img alt="체크아이콘" src="/assets/images/bul_2.png"/> -->쪼그리고 앉거나, 오래 서 있거나, 힘든 일을 할 때나,
+                    <p><!-- <img alt="체크아이콘" src="assets/images/bul_2.png"/> -->쪼그리고 앉거나, 오래 서 있거나, 힘든 일을 할 때나,
                         심지어는 기침만 하여도 치핵이 튀어 나온다.</p>
                 </li>
                 <li>
-                    <p><!-- <img alt="체크아이콘" src="/assets/images/bul_2.png"/> -->치핵이 국화꽃 핀 것처럼 항문 밖으로 탈홍되어 있다.
+                    <p><!-- <img alt="체크아이콘" src="assets/images/bul_2.png"/> -->치핵이 국화꽃 핀 것처럼 항문 밖으로 탈홍되어 있다.
                     </p>
                 </li>
                 <li>
-                    <p><!-- <img alt="체크아이콘" src="/assets/images/bul_2.png"/> -->탈출한 치핵이 괄약근으로 조여 심하게 붓고 아프다.
+                    <p><!-- <img alt="체크아이콘" src="assets/images/bul_2.png"/> -->탈출한 치핵이 괄약근으로 조여 심하게 붓고 아프다.
                     </p>
                 </li>
                 <li>
-                    <p><!-- <img alt="체크아이콘" src="/assets/images/bul_2.png"/> -->출산 전, 후에 치핵으로 고생한 경험이 있으며, 앞으로
+                    <p><!-- <img alt="체크아이콘" src="assets/images/bul_2.png"/> -->출산 전, 후에 치핵으로 고생한 경험이 있으며, 앞으로
                         출산 예정에 있다.</p>
                 </li>
                 <li>
-                    <p><!-- <img alt="체크아이콘" src="/assets/images/bul_2.png"/> -->출혈, 통증, 탈출이 되풀이 된다.</p>
+                    <p><!-- <img alt="체크아이콘" src="assets/images/bul_2.png"/> -->출혈, 통증, 탈출이 되풀이 된다.</p>
                 </li>
                 <li>
-                    <p><!-- <img alt="체크아이콘" src="/assets/images/bul_2.png"/> -->항문 둘레의 약 반 정도가 꽈리 모양으로 부풀어 있으며
+                    <p><!-- <img alt="체크아이콘" src="assets/images/bul_2.png"/> -->항문 둘레의 약 반 정도가 꽈리 모양으로 부풀어 있으며
                         통증이 있다.</p>
                 </li>
                 <li>
-                    <p><!-- <img alt="체크아이콘" src="/assets/images/bul_2.png"/> -->탈출한 치핵의 색이 까맣게 변해 있으며 통증이 있다.
+                    <p><!-- <img alt="체크아이콘" src="assets/images/bul_2.png"/> -->탈출한 치핵의 색이 까맣게 변해 있으며 통증이 있다.
                     </p>
                 </li>
             </ul>
@@ -2309,21 +2309,21 @@ function slidenum(num){
         <p class="h2_small">HONGMUN CLINIC</p>
 
         <div class="intro_device" style="margin-bottom:50px;"><img alt="리가슈어"
-                src="/assets/images/ligasure.png" /></div>
+                src="assets/images/ligasure.png" /></div>
 
         <h2>검사장비</h2>
 
         <p class="h2_small">HONGMUN CLINIC</p>
 
         <div class="intro_device" style="margin-bottom:80px;"><img alt="endo co2"
-                src="/assets/images/endoco2.png" /></div>
+                src="assets/images/endoco2.png" /></div>
     </article>
 </section>
 
 			</section>
 			<!-- //메인영역 -->
 
-			<div id="goto-top"><img src="/assets/images/btn_top.png"/></div>
+			<div id="goto-top"><img src="assets/images/btn_top.png"/></div>
 
 
 			</div>
