--- a/sub5.html
+++ b/sub5.html
@@ -31,24 +31,24 @@
 		<META name="twitter:image" content="images/b.png">
 		<META name="twitter:description" content="의정부시 금오동, 치핵, 치루, 치열, 항문, 대장내시경, 용종절제술, 대장암">
 		<title>의정부 홍문외과 </title>
-		<link rel="stylesheet" href="/assets/css/jquery.slider.css">
-		<link rel="stylesheet" href="/assets/css/common.css">
+		<link rel="stylesheet" href="assets/css/jquery.slider.css">
+		<link rel="stylesheet" href="assets/css/common.css">
 
-		<script src="/assets/js/jquery-1.11.1.min.js"></script>
-		<script src="/assets/js/kakao.link.js"></script>
-		<script src="/assets/js/jquery.slider.min.js"></script>
-		<script src="/assets/js/common.js"></script>
+		<script src="assets/js/jquery-1.11.1.min.js"></script>
+		<script src="assets/js/kakao.link.js"></script>
+		<script src="assets/js/jquery.slider.min.js"></script>
+		<script src="assets/js/common.js"></script>
 		<!--[if IE]>
-		<script src="/assets/js/html5.js"></script>
+		<script src="assets/js/html5.js"></script>
 		<![endif]-->
-		<link type="text/css" rel="stylesheet" href="/assets/css/skin38.css">
+		<link type="text/css" rel="stylesheet" href="assets/css/skin38.css">
 		<link type='text/css' rel='stylesheet' href='upload/hongmun/css/skin_sub04.css'>
 		<link type='text/css' rel='stylesheet' href='upload/hongmun/css/board.css'>
 		<meta name="format-detection" content="telephone=no" />
-<link href="/assets/css/popup.css" rel="stylesheet" />
+<link href="assets/css/popup.css" rel="stylesheet" />
 <link href='upload/hongmun/css/board.css' rel='stylesheet' />
-<script src="/assets/js/modal_object.js"></script>	
-<script src="/assets/js/jquery.form.min.js"></script>
+<script src="assets/js/modal_object.js"></script>	
+<script src="assets/js/jquery.form.min.js"></script>
 <script type="text/javascript">
 //	_current_page = "main";
 
@@ -293,7 +293,7 @@
 			$("#footer").empty();
 			$("#footer").append(t_footer);
 		}else if("1000000940"=="1000001143"){
-			var t_footer = '<footer id="footer" role="contentinfo" style="height: 150px;"><div id="footer-content"><p>인천광역시 남동구 예술로 204번길 31 신양빌딩 3F</p><p style="margin-top: -10px;">대표번호 : 1661-8055</p><p style="margin-top: -10px;">이메일 : ilikedoc@naver.com</p><center><p style="text-align : center;border: 1px solid white; width: 200px; font-color : black"><a href="http://www.saeneulcom.com" target="_blank"><img src="/assets/images/footer_logo_bi_2.png" caption="(주)새늘컴퍼니" width="120"/></a></p></center><p class="credit-link"></p><p style="opacity: 0.4;font-size: 9px;letter-spacing: 0px; margin-top: -10px;">Copyright ⓒ  ILikeDoctor &amp; SaeneulCompany . All Rights Reserved.</p></div></footer>';
+			var t_footer = '<footer id="footer" role="contentinfo" style="height: 150px;"><div id="footer-content"><p>인천광역시 남동구 예술로 204번길 31 신양빌딩 3F</p><p style="margin-top: -10px;">대표번호 : 1661-8055</p><p style="margin-top: -10px;">이메일 : ilikedoc@naver.com</p><center><p style="text-align : center;border: 1px solid white; width: 200px; font-color : black"><a href="http://www.saeneulcom.com" target="_blank"><img src="assets/images/footer_logo_bi_2.png" caption="(주)새늘컴퍼니" width="120"/></a></p></center><p class="credit-link"></p><p style="opacity: 0.4;font-size: 9px;letter-spacing: 0px; margin-top: -10px;">Copyright ⓒ  ILikeDoctor &amp; SaeneulCompany . All Rights Reserved.</p></div></footer>';
 			$("#footer").empty();
 			$("#footer").append(t_footer);
 		}else{
@@ -1459,7 +1459,7 @@ function slidenum(num){
 
 		var contentString = [
 			'<div class="iw_inner" style="width:180px;">',
-			'   <img src="/assets/images/logo.png" style="max-width:180px;">',
+			'   <img src="assets/images/logo.png" style="max-width:180px;">',
 			'</div>'
 		].join('');
 
@@ -1963,7 +1963,7 @@ function slidenum(num){
 </div>
 <div class="mask-div" id="mask" style="position:absolute; z-index:9000; background-color:#000; display:none; left:0; top:0; width:100%; height:140%;opacity:0.7;"></div>
 <div class="mask-div" style="display: none; position:absolute; left:10%;  top:15%; z-index:10000;">
-	<img src="/assets/images/end_logo.jpg" style="width:90%;">
+	<img src="assets/images/end_logo.jpg" style="width:90%;">
 </div>
 <script>
  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -1980,10 +1980,10 @@ function slidenum(num){
 				<div class="container">
 					<!-- 상단 홈/로고/전화 영역 -->
 					<div class="navbar-header">
-						<img src="/assets/images/icon_menu.png" class="icon-top icon-menu"/>
-						<img src="/assets/images/icon_home.png" id="tpl_main" class="icon-top icon-home" hidden>
-						<img src="/assets/images/logo.png" id="tpl_main" class="navbar-brand" rel="home">
-						<img src="/assets/images/icon_tel.png" id="tpl_phone_tel" class="icon-top icon-phone">
+						<img src="assets/images/icon_menu.png" class="icon-top icon-menu"/>
+						<img src="assets/images/icon_home.png" id="tpl_main" class="icon-top icon-home" hidden>
+						<img src="assets/images/logo.png" id="tpl_main" class="navbar-brand" rel="home">
+						<img src="assets/images/icon_tel.png" id="tpl_phone_tel" class="icon-top icon-phone">
 					</div>
 					<!-- //상단 홈/로고/전화 영역 -->
 					
@@ -2044,7 +2044,7 @@ function slidenum(num){
 		/* height: 900px !important; */
 	}
 </style>
-<div><img alt="오시는 길" src="/assets/images/con_sub_top5.png" /></div>
+<div><img alt="오시는 길" src="assets/images/con_sub_top5.png" /></div>
 
 <table border="1" cellpadding="0" cellspacing="1" width="100%">
 	<colgroup>
@@ -2072,7 +2072,7 @@ function slidenum(num){
     --><!-- 1. 약도 노드 -->
 
 <div class="root_daum_roughmap root_daum_roughmap_landing" id="daumRoughmapContainer1697083771550">&nbsp;</div>
-<!-- 2. 설치 스크립트 --><script charset="UTF-8" class="daum_roughmap_loader_script" src="/assets/js/roughmapLoader.js"></script><!-- 3. 실행 스크립트 --><script charset="UTF-8">
+<!-- 2. 설치 스크립트 --><script charset="UTF-8" class="daum_roughmap_loader_script" src="assets/js/roughmapLoader.js"></script><!-- 3. 실행 스크립트 --><script charset="UTF-8">
         new daum.roughmap.Lander({
             "timestamp" : "1697083771550",
             "key" : "2gf9z",
@@ -2087,14 +2087,14 @@ function slidenum(num){
 
 <p class="h2_small">HONGMUN CLINIC</p>
 
-<div style="margin-bottom:60px;"><img alt="" src="/assets/images/park_img.png" /></div>
+<div style="margin-bottom:60px;"><img alt="" src="assets/images/park_img.png" /></div>
 </section>
 
 
 			</section>
 			<!-- //메인영역 -->
 
-			<div id="goto-top"><img src="/assets/images/btn_top.png"/></div>
+			<div id="goto-top"><img src="assets/images/btn_top.png"/></div>
 
 
 			</div>
