--- a/sub2.html
+++ b/sub2.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <section id="sub-article">
 	<style type="text/css">
-		@import url('../webfontworld.github.io/sunn/SUIT.css');
+		@import url('assets/css/SUIT.css');
 
 		section#sub-article {
 			padding: 0 0 0 0 !important;
